tests/invalid/syntax_err_bad_decl.c
int main() {
    ints a = 1;
    return a;
}
// ERROR: Line 2, Error 2003